--- a/config/locales/views/bulletins/en.yml
+++ b/config/locales/views/bulletins/en.yml
@@ -1,24 +1,21 @@
 en:
   bulletins:
     index:
-      button:
-        search: "Search"
-        new: "New Bulletin"
-        previous: "Previous"
-        next: "Next"
+      search: Search
+      new: New Bulletin
       table:
-        title: "Title"
-        author: "Author"
-        time: "Time"
+        title: Title
+        author: Author
+        time: Time
     show:
-      message: "This page was last modified on %{time} by %{author}."
-      edit: "Edit"
-      modify: "Modify"
+      message: This page was last modified on %{time} by %{author}.
+      edit: Edit
+      modify: Modify
     form:
-      title: "Title"
-      content: "Content"
+      title: Title
+      content: Content
       submit: Submit
     edit:
-      modify: "Modify"
+      modify: Modify
     new:
-      new: "New"
+      new: New
