--- a/config/locales/views/instruments/zh-CN.yml
+++ b/config/locales/views/instruments/zh-CN.yml
@@ -1,23 +1,21 @@
 zh-CN:
-  achievements:
+  instruments:
     index:
-      button:
-        search: 搜索
-        new: 新增成果
-      previous: 上一页
-      next: 下一页
+      search: 搜索
+      new: 新增仪器
       table:
         title: 标题
-        author: 作者
         time: 时间
-        read_times: 阅读次数
     show:
       message: 本条目由%{author}最后编辑于%{time}。
       edit: 编辑
       modify: 修改
+      history: 查看历史版本
     form:
       title: 标题
-      content: 内容
+      category: 分类
+      save: 保存
+      tags: 标签
       submit: 确认
     edit:
       modify: 修改
