--- a/config/locales/views/news/zh-CN.yml
+++ b/config/locales/views/news/zh-CN.yml
@@ -1,29 +1,27 @@
 zh-CN:
   news:
     index:
-      button:
-        search: "搜索"
-        new: "新增新闻"
-      previous: "上一页"
-      next: "下一页"
+      search: 搜索
+      new: 新增新闻
       table:
-        title: "标题"
-        author: "作者"
-        time: "时间"
-        hits: "阅读次数"
+        title: 标题
+        author: 作者
+        time: 时间
+        hits: 阅读次数
+        delete_confirm: 你确定吗？
     show:
-      message: "本条目由%{author}最后编辑于%{time}。"
-      edit: "编辑"
-      modify: "修改"
+      message: 本条目由%{author}最后编辑于%{time}。
+      edit: 编辑
+      modify: 修改
     form:
-      title: "标题"
-      content: "内容"
-      submit: "确认"
+      title: 标题
+      content: 内容
+      submit: 确认
     edit:
-      modify: "修改"
+      modify: 修改
     new:
-      new: "新增"
+      new: 新增
       steps:
-        step1: "创建条目"
-        step2: "完善内容"
-        step3: "完成"
+        step1: 创建条目
+        step2: 完善内容
+        step3: 完成
