--- a/config/locales/views/home/zh-CN.yml
+++ b/config/locales/views/home/zh-CN.yml
@@ -2,7 +2,12 @@ zh-CN:
   home:
     index:
       messages:
-        header: 消息
         none: 您没有未读消息。
         only_one: 您有1条未读消息。
         more_than_one: 您有%{number}条未读消息。
+      meetings:
+        info: 从%{starts_at}到%{ends_at}，在%{place}
+        none: 今天没有会议。
+      schedule:
+        info: 从%{starts_at}到%{ends_at}，在%{place}
+        none: 今天没有待办事项。
