simplify the login form

--- a/config/locales/views/achievements/en.yml
+++ b/config/locales/views/achievements/en.yml
@@ -24,6 +24,7 @@ en:
       - Award
       - English Paper
       content: Content
+      public: Public?
       submit: Submit
       cancel: Cancel
     edit:
