--- a/config/locales/views/settings/emails/en.yml
+++ b/config/locales/views/settings/emails/en.yml
@@ -3,4 +3,6 @@ en:
     emails:
       edit:
         email: Email
+        verified: Verified
+        unverified: Unverified
         submit: Submit
