--- a/config/locales/controllers/en.yml
+++ b/config/locales/controllers/en.yml
@@ -101,12 +101,17 @@ en:
       success: Photo was successfully updated.
   settings:
     avatars:
-      update: Avatar was successfully updated.
+      update:
+        success: Avatar was successfully updated.
     emails:
-      update: Email was successfully updated.
+      update:
+        success: Email was successfully updated.
     locales:
-      update: Locale was successfully updated.
+      update:
+        success: Locale was successfully updated.
     passwords:
-      update: Password was successfully updated.
+      update:
+        success: Password was successfully updated.
     usernames:
-      update: Username was successfully updated.
+      update:
+        success: Username was successfully updated.
