use 'kaminari' as paginator

--- a/config/locales/views/achievements/en-US.yml
+++ b/config/locales/views/achievements/en-US.yml
@@ -24,7 +24,7 @@ en-US:
       - Award
       - English Paper
       content: Content
-      public: Public?
+      hidden: Hidden?
       submit: Submit
       cancel: Cancel
     edit:
