--- a/config/locales/views/users/en-US.yml
+++ b/config/locales/views/users/en-US.yml
@@ -42,6 +42,12 @@ en-US:
       avatar: Avatar
       photo: Photo
       resume: Resume
+      modules: Modules
+      permissions: Permissions
+      read: Read
+      create: Create
+      edit: Edit
+      delete: Delete
     edit:
       edit: Edit
       username: Username
