--- a/config/locales/views/resources/zh-CN.yml
+++ b/config/locales/views/resources/zh-CN.yml
@@ -21,5 +21,5 @@ zh-CN:
         resource:
           title: 名称
           document: 文件
-          public: 公开?
+          hidden: 隐藏?
           help: 公开的文件可以通过应用程序编程接口（API）访问。请确认您拥有该文件的版权。
