group model and basic groups functions

--- a/config/locales/views/defaults/en-US.yml
+++ b/config/locales/views/defaults/en-US.yml
@@ -17,6 +17,7 @@ en-US:
     expense: Expense
     bulletin: Bulletin
     users: Users
+    groups: Groups
     messages: Messages
   menu:
     language: Language
