--- a/config/locales/models/zh-CN.yml
+++ b/config/locales/models/zh-CN.yml
@@ -13,6 +13,7 @@ zh-CN:
       resource: 资源
       schedule: 日程
       user: 用户
+      group: 群组
     attributes:
       topic:
         title: 标题
@@ -54,3 +55,6 @@ zh-CN:
         name: 姓名
         email: 邮箱
         password: 密码
+      group:
+        name: 群组名称
+        description: 简介
