add inventory module

--- a/config/locales/views/defaults/en-US.yml
+++ b/config/locales/views/defaults/en-US.yml
@@ -14,6 +14,7 @@ en-US:
     meetings: Meetings
     achievements: Achievements
     instruments: Instruments
+    inventories: Inventory
     expense: Expense
     bulletin: Bulletin
     users: Users
