--- a/config/locales/views/defaults/zh-CN.yml
+++ b/config/locales/views/defaults/zh-CN.yml
@@ -14,6 +14,7 @@ zh-CN:
     meetings: 会议
     achievements: 成果
     instruments: 仪器
+    inventories: 库存
     expense: 财务
     bulletin: 公告
     users: 用户
