--- a/config/locales/views/defaults/zh-CN.yml
+++ b/config/locales/views/defaults/zh-CN.yml
@@ -16,7 +16,7 @@ zh-CN:
     instruments: 仪器
     inventories: 库存
     expense: 财务
-    bulletin: 公告
+    orders: 订单
     users: 用户
     groups: 群组
     messages: 消息
