--- a/config/locales/views/users/en-US.yml
+++ b/config/locales/views/users/en-US.yml
@@ -73,7 +73,7 @@ en-US:
       permission_topic: Topics Permission
       permission_comment: Comments Permission
       permission_achievement: Achievements Permission
-      permission_bulletin: Bulletins Permission
+      permission_order: Orders Permission
       permission_instrument: Instruments Permission
       permission_meeting: Meetings Permission
       permission_news: News Permission
