message module improvement
show messages list on the home page
like/unlike messages
load more messages via js

--- a/config/locales/views/messages/en-US.yml
+++ b/config/locales/views/messages/en-US.yml
@@ -1,8 +1,4 @@
 en-US:
   messages:
     index:
-      new: New Message
-      mark_as_read: Mark as read
-      content: Message
-      submit: Submit
-      cancel: Cancel
+      more: More
