--- a/config/locales/views/home/en-US.yml
+++ b/config/locales/views/home/en-US.yml
@@ -2,9 +2,7 @@ en-US:
   home:
     index:
       messages:
-        none: No unread message.
-        only_one: You have one unread message.
-        more_than_one: You have %{number} unread messages.
+        post: Post
       meetings:
         info: At %{place}, from %{starts_at} to %{ends_at}
         none: No meeting today.
