--- a/config/locales/views/home/zh-CN.yml
+++ b/config/locales/views/home/zh-CN.yml
@@ -2,9 +2,7 @@ zh-CN:
   home:
     index:
       messages:
-        none: 您没有未读消息。
-        only_one: 您有一条未读消息。
-        more_than_one: 您有%{number}条未读消息。
+        post: 发布
       meetings:
         info: 从%{starts_at}到%{ends_at}，在%{place}
         none: 今天没有会议。
